// ============================================================================
// /manufacturing/quality-inspection-service (版本 2.0)
// 描述: 提供质量检验批的创建、结果记录和使用决策功能。
//       字段设计参考核心ERP的 QALS (检验批记录) 和 QAMR (检验结果) 表。
// ============================================================================

syntax = "proto3";

package mf.qi.v1;


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";

// ============================================================================
// 服务定义: QualityInspectionService
// ============================================================================

service QualityInspectionService {
  // 创建检验批 (New)
  rpc CreateInspectionLot(CreateInspectionLotRequest) returns (InspectionLotResponse) {

    option (google.api.http) = {

      post: "/api/v1/manufacturing/inspection-lot"

      body: "*"

    };

  }

  // 获取检验批详情
  rpc GetInspectionLot(GetInspectionLotRequest) returns (InspectionLotDetail) {


    option (google.api.http) = {


      get: "/api/v1/manufacturing/inspection-lot"


    };


  }

  // 查询检验批列表 (New)
  rpc ListInspectionLots(ListInspectionLotsRequest) returns (ListInspectionLotsResponse) {


    option (google.api.http) = {


      get: "/api/v1/manufacturing/inspection-lots"


    };


  }

  // 记录检验结果
  rpc RecordInspectionResults(RecordResultsRequest) returns (RecordResultsResponse) {


    option (google.api.http) = {


      post: "/api/v1/manufacturing/record-inspection-results"


      body: "*"


    };


  }

  // 对检验批做使用决策
  rpc MakeUsageDecision(MakeUsageDecisionRequest) returns (MakeUsageDecisionResponse) {


    option (google.api.http) = {


      post: "/api/v1/manufacturing/make-usage-decision"


      body: "*"


    };


  }
}

// ============================================================================
// 数据结构: InspectionLot (检验批)
// ============================================================================

// 检验批详情 (参考: QALS)
message InspectionLotDetail {
  // 检验批号 (原: PRUEFLOS)
  string inspection_lot_number = 1;
  // 物料编号 (原: MATNR)
  string material = 2;
  // 工厂 (原: WERK)
  string plant = 3;
  // 检验批来源 (例如, '01' for GR, '04' for Production) (原: HERKUNFT)
  common.v1.InspectionLotOrigin lot_origin = 4;
  // 检验批数量 (原: LOSMENGE)
  common.v1.QuantityValue lot_quantity = 5;
  // 创建日期 (原: ENTSTEHDAT)
  google.protobuf.Timestamp creation_date = 7;
  // 检验特性列表
  repeated InspectionCharacteristic characteristics = 8;
  // 使用决策
  common.v1.UsageDecision usage_decision = 9;
}

// 检验特性 (参考: QAMR, QASR)
message InspectionCharacteristic {
  // 特性编号 (原: MERKNR)
  string characteristic_number = 1;
  // 特性描述
  string description = 2;
  // 检验方法
  string inspection_method = 3;
  // 记录的检验结果
  string result_value = 4;
  // 结果状态 (例如, '2' for Processed, '5' for Valuated)
  string result_status = 5;
  // 单位
  string unit = 6;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 创建检验批请求
message CreateInspectionLotRequest {
  string material = 1;
  string plant = 2;
  common.v1.QuantityValue quantity = 3;
  common.v1.InspectionLotOrigin origin = 4;
  // 来源凭证 (如 PO号, 生产订单号)
  common.v1.SystemDocumentReference source_document = 5;
  common.v1.RequestContext context = 99;
}

// 检验批响应
message InspectionLotResponse {
  bool success = 1;
  string inspection_lot_number = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 获取检验批请求
message GetInspectionLotRequest {
  // 检验批号
  string inspection_lot_number = 1;
  common.v1.RequestContext context = 99;
}

// 查询检验批请求
message ListInspectionLotsRequest {
  // 工厂
  string plant = 1;
  // 物料
  string material = 2;
  // 来源
  common.v1.InspectionLotOrigin origin = 3;
  // 创建日期范围
  common.v1.DateRange creation_date_range = 4;
  // 分页请求
  common.v1.PaginationRequest pagination = 98;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 查询检验批响应
message ListInspectionLotsResponse {
  repeated InspectionLotDetail inspection_lots = 1;
  common.v1.PaginationResponse pagination = 2;
}

// 记录检验结果请求
message RecordResultsRequest {
  // 检验批号
  string inspection_lot_number = 1;
  // 结果列表
  repeated CharacteristicResult results = 2;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 特性结果
message CharacteristicResult {
  // 特性编号
  string characteristic_number = 1;
  // 记录的值
  string value = 2;
  // 备注
  string remark = 3;
}

// 记录检验结果响应
message RecordResultsResponse {
  // 操作是否成功
  bool success = 1;
  // 从核心ERP返回的消息列表
  repeated common.v1.ApiMessage messages = 2;
}

// 做使用决策请求
message MakeUsageDecisionRequest {
  // 检验批号
  string inspection_lot_number = 1;
  // 使用决策代码
  common.v1.UsageDecision decision_code = 2;
  // 将合格品过账到的库存类型
  string post_to_stock_type = 3;
  // 备注
  string note = 4;
  // 请求上下文
  common.v1.RequestContext context = 99;
}

// 做使用决策响应
message MakeUsageDecisionResponse {
  // 操作是否成功
  bool success = 1;
  // 从核心ERP返回的消息列表
  repeated common.v1.ApiMessage messages = 2;
}
